# ratel

./: .gitignore  .travis.yml  Cargo.toml  README.md
.circleci/: config.yml  congif.yml
docker/: Dockerfile  docker_build.sh  docker_env.sh  docker_remove.sh  docker_run.sh
scripts/: greedy_file.sh  pair_epsilon.sh  pair_greedy.sh  pair_run.sh  run_optimistic.sh
src/: game.rs  lib.rs  main.rs
src/agent/: agent.rs  epsilon_greedy.rs  greedy.rs  greedy_agent.rs  mod.rs  optimistic.rs
src/bandit/: bandit.rs  binomial.rs  distribution.rs  exponential.rs  gamma.rs  gaussian.rs  log_normal.rs  mod.rs
src/experiments/: mod.rs  multiple_runs.rs  pair_bernoulli.rs  sequential_bernoulli.rs
src/run/: epsilon_bernoulli.rs  greedy_bernoulli.rs  mod.rs  multiple_runs.rs  optimistic_bernoulli.rs  pair_bernoulli.rs  sequential_bernoulli.rs
src/util/: arg_bounds.rs  arg_max.rs  counter.rs  mod.rs  stepper.rs  timer.rs
src/util/counter/: aggregate_counter.rs  base_counter.rs  counter.rs  mod.rs  record_counter.rs
src/util/stepper/: constant.rs  harmonic.rs  mod.rs  stepper.rs
