[package]
name = "ratel_bandit"
version = "0.2.2"
authors = ["DanielMorton <dacmorton@gmail.com>"]
description = "Rust Implementation of a Muti-armed Bandit Simulator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DanielMorton/ratel"
edition = "2018"
exclude = [
    ".circleci/config.yml",
    ".travis.yml",
    ".cargo_vcs_info.json"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_approx_eq = "1.1.0"
lazy_static = "1.4.0"

[dependencies]
clap = "4.4.11"
num-traits = "0.2.17"
rand = "0.8.5"
rand_distr = "0.4.3"